--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
     
     <!--Image card 01-->
     <div class="image-mountian">
-        <img class="image-mountian__pic"src="./assets/img/mountain.jpg" alt="mountian">
+        <img class="image-mountian__pic"src="assets/img/mountain.jpg" alt="mountian">
         <div class="image-mountian__rect">
             <h3 class="image-mountian__heading">6 Sitecore websites delivered to Wyndham.</h3>
             <p class="image-mountian__des">Wyndham Vacation Rentals (UK) Ltd (WVRUK) appointed Codehouse to re-develop six of its websites on the Sitecore CMS platform.</p>
@@ -69,7 +69,7 @@
 
     <!--Image card 02 -->
     <div class="image-food">
-        <img class="image-food__pic" src="assets/food.png" alt="food">
+        <img class="image-food__pic" src="assets/img/food.jpg" alt="food">
         <div class="image-food__rect">
             <h3 class="image-food__heading">6 Sitecore websites delivered to Wyndham.</h3>
             <p class="image-food__des">Wyndham Vacation Rentals (UK) Ltd (WVRUK) appointed Codehouse to re-develop six of its websites on the Sitecore CMS platform.</p>
